Fixing logo spacing

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -207,7 +207,9 @@ body.with-header {
 }
 
 .socials-container {
-	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	gap: 10px;
 }
 
